2009-03-25  Claude Paroz  <claude@2xlibre.net>

	* help/fr/figures/*.png:
	* help/fr/fr.po: Added French translation, by Claude Paroz and Bruno
	Brouard.
	* help/Makefile.am: Added fr to DOC_LINGUAS.

2009-03-16  Andre Klapper  <a9016009@gmx.de>

	* help/cs/cs.po: Added Czech translation by Martin Picek.
	* help/Makefile.am: Added cs to DOC_LINGUAS.

=== gnome-user-share 2.26.0 ===

2009-03-16  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.26.0

2009-03-14  Philip Withnall  <philip@tecnocode.co.uk>

	* help/en_GB/en_GB.po: Updated British English translation by Jen
	Ockwell <jenfraggleubuntu@gmail.com>.

2009-03-03  Philip Withnall  <philip@tecnocode.co.uk>

	* help/Makefile.am:
	* help/en_GB/en_GB.po: Added British English translation.

=== gnome-user-share 2.25.92 ===

2009-03-03  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.25.92

2009-03-01  Simos Xenitellis  <simos@gnome.org>

	* help/Makefile.am: Added el to DOC_LINGUAS.
	* help/el/el.po: Added Greek translation by Michael Kotsarinis.

2009-02-18  Daniel Nylander <po@danielnylander.se>

	* help/sv/sv.po: Updating Swedish translation.

2009-02-15  Daniel Nylander <po@danielnylander.se>

	* help/sv/sv.po: Updating Swedish translation.
	* help/sv/figures: Adding screenshots.

=== gnome-user-share 2.25.91 ===

2009-02-03  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.25.91

2009-02-03  Frederic Peters  <fpeters@0d.be>

	* data/dav_user_2.2.conf: fixed runtime substitution of
	HTTP_MODULES_PATH in configuration file.

=== gnome-user-share 2.25.90 ===

2009-02-03  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.25.90
	* help/C/gnome-user-share.xml: Fix build
	* help/de/legal.xml:
	* help/es/legal.xml:
	* help/sv/legal.xml: Update from the tools

2009-02-02  Frederic Peters  <fpeters@0d.be>

	* configure.in: remove buildtime checks for Apache.

	* src/Makefile.am:
	* src/http.c: (get_httpd_program), (get_httpd_modules_path),